--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
-    "lenis": "^1.0.45",
     "locomotive-scroll": "^5.0.0-beta.12",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18"
   },
   "devDependencies": {
     "@types/locomotive-scroll": "^4.1.3",
