--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@studio-freight/hamo": "^0.6.33",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "@types/locomotive-scroll": "^4.1.3",
     "gsap": "^3.12.5",
-    "locomotive-scroll": "^5.0.0-beta.12",
+    "lenis": "^1.0.45",
+    "locomotive-scroll": "^4.1.4",
     "next": "14.2.3",
-    "react": "^18"
+    "react": "^18",
+    "react-locomotive-scroll": "^0.2.2"
   },
   "devDependencies": {
-    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
