--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/locomotive-scroll": "^4.1.3",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
-    "locomotive-scroll": "^4.1.4",
+    "locomotive-scroll": "^5.0.0-beta.12",
     "next": "14.2.3",
     "react": "^18",
     "react-locomotive-scroll": "^0.2.2"
