--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@next/font": "^14.2.3",
-    "@studio-freight/hamo": "^0.6.33",
-    "@studio-freight/react-lenis": "^0.0.47",
     "@types/locomotive-scroll": "^4.1.3",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
     "locomotive-scroll": "^5.0.0-beta.12",
     "next": "14.2.3",
-    "react": "^18",
-    "react-locomotive-scroll": "^0.2.2"
+    "react": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
